<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".framework.view.activity.MainActivity" >

    <item android:id="@+id/icon_rate_us"
        android:title="@string/rate_us"
        android:orderInCategory="1"
        android:visible="true"
        android:icon="@drawable/ic_star_border_white_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/icon_share"
        android:title="@string/share"
        android:orderInCategory="2"
        android:visible="true"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_info"
        android:title="@string/app_information"
        android:orderInCategory="3"
        android:visible="true"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_contact_us"
        android:title="@string/contact_us"
        android:orderInCategory="4"
        android:visible="true"
        android:icon="@drawable/ic_mail_outline_white_24dp"
        app:showAsAction="ifRoom" />

</menu>
