<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_container_coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".framework.view.activity.MainActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.AppBarLayout
                android:id="@+id/main_container_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include layout="@layout/toolbar"/>
                <android.support.design.widget.TabLayout
                    app:tabBackground="@color/colorPrimary"
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="fixed"
                    app:tabGravity="fill"
                    app:tabTextColor="@color/gray_300"
                    app:tabSelectedTextColor="@color/white"
                    app:tabIndicatorColor="@color/white"
                    android:tabStripEnabled = "true"/>
            </android.support.design.widget.AppBarLayout>
            <FrameLayout
                android:id="@+id/content_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightGray"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
    <RelativeLayout
        android:id="@+id/rel_instruction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/black_overlay">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="start">
            <TextView
                android:id="@+id/txt_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tips"
                android:gravity="center"
                android:padding="@dimen/medium_padding"
                android:textSize="@dimen/xx_large_text_size"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_mode_tip"
                android:textSize="@dimen/instruction_text_size"
                android:gravity="start"
                android:padding="@dimen/medium_padding"
                android:drawablePadding="@dimen/medium_padding"
                android:drawableLeft="@drawable/ic_flight_white_36dp"
                android:drawableStart="@drawable/ic_flight_white_36dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_tip"
                android:textSize="@dimen/instruction_text_size"
                android:gravity="start"
                android:padding="@dimen/medium_padding"
                android:drawablePadding="@dimen/medium_padding"
                android:drawableLeft="@drawable/ic_location_on_white_36dp"
                android:drawableStart="@drawable/ic_location_on_white_36dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_instruction_gotit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/large_padding"
            android:text="@string/got_it"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawablePadding="@dimen/medium_padding"
            android:drawableLeft="@drawable/ic_thumb_up_white_24dp"
            android:drawableStart="@drawable/ic_thumb_up_white_24dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>
    </RelativeLayout>
</FrameLayout>