<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4">
        <com.vvorld.speedview.GaugeView
            android:id="@+id/gauge_viewKPH"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            gauge:showOuterShadow="false"
            gauge:showOuterRim="false"
            gauge:showInnerRim="false"
            gauge:needleWidth="0.010"
            gauge:needleHeight="0.40"
            gauge:scaleStartValue="0"
            gauge:scaleEndValue="1000"
            android:layout_marginTop="@dimen/gaugeViewMarginTop"  />
        <com.vvorld.speedview.GaugeView
            android:id="@+id/gauge_viewMPS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            gauge:showOuterShadow="false"
            gauge:showOuterRim="false"
            gauge:showInnerRim="false"
            gauge:needleWidth="0.010"
            gauge:needleHeight="0.40"
            gauge:scaleStartValue="0"
            gauge:scaleEndValue="300"
            android:layout_marginTop="@dimen/gaugeViewMarginTop"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="@dimen/kphMphLinPadingBottom">
            <TextView
                android:id="@+id/txt_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/txtkphMphSize"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/txt_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kph"
                android:textSize="@dimen/txtkphMphSize"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/radioLayoutMarginBottom"
        android:layout_marginTop="@dimen/radioLayoutMarginTop"
        android:gravity="center"
        android:layout_marginLeft="@dimen/parentLayoutMarginLeftRight"
        android:layout_marginRight="@dimen/parentLayoutMarginLeftRight">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="@dimen/radioButtonHeight"
                android:text="@string/kph"
                android:id="@+id/radioButtonKPH"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/radio_button_text_color_selector"
                android:checked="true"
                android:textSize="@dimen/radioKphMphTextSize"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="@dimen/radioButtonHeight"
                android:text="@string/mps"
                android:id="@+id/radioButtonMPS"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/radioKphMphTextSize"
                android:textColor="@color/radio_button_text_color_selector"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/btn_getSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_speed"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/parentLayoutMarginLeftRight"
        android:layout_marginRight="@dimen/parentLayoutMarginLeftRight"
        style="@style/speedButtonStyle"/>
    </LinearLayout>
</LinearLayout>
